# BasicFastAPI_Day3

./: .env  .env.example  .gitignore  Dockerfile  pyproject.toml
alembic/: env.py
alembic/versions/: 080402f60e4c_init_users_and_items_tables.py
app/: main.py
app/api/v1/endpoints/: auth.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: base_class.py  item.py  user.py
app/schemas/: token.py  user.py
app/services/: user_service.py
