[project]
name = "fastapi-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.3",
    "fastapi>=0.126.0",
    "greenlet>=3.3.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "scalar-fastapi>=1.5.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.38.0",
]
